Validate query engine presence when table format engine is configured