@@ -15,9 +15,13 @@
  */
 package com.datasqrl.engine.pipeline;
 
+import com.datasqrl.config.EngineFactory;
 import com.datasqrl.config.EngineType;
 import com.datasqrl.engine.ExecutionEngine;
+import com.datasqrl.engine.database.QueryEngine;
+import com.datasqrl.engine.database.relational.AbstractJDBCTableFormatEngine;
 import com.datasqrl.error.ErrorCollector;
+import com.datasqrl.util.ServiceLoaderDiscovery;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.HashMultimap;
 import java.util.ArrayList;
@@ -25,39 +29,24 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
-import lombok.Value;
 
 /**
  * A simple pipeline that has a single stream, log, and server engine with support for multiple
  * databases.
  */
-@Value
-public class SimplePipeline implements ExecutionPipeline {
+public record SimplePipeline(
+    List<ExecutionStage> stages,
+    HashMultimap<ExecutionStage, ExecutionStage> upstream,
+    HashMultimap<ExecutionStage, ExecutionStage> downstream)
+    implements ExecutionPipeline {
 
-  List<ExecutionStage> stages;
-
-  HashMultimap<ExecutionStage, ExecutionStage> upstream;
-  HashMultimap<ExecutionStage, ExecutionStage> downstream;
-
-  //  private SimplePipeline(List<ExecutionStage> stages) {
-  //    this.stages = stages;
-  //    for (int i = 0; i < stages.size(); i++) {
-  //      ExecutionStage stage = stages.get(i);
-  //      for (int j = i; j < stages.size(); j++) {
-  //        downstream.put(stage,stages.get(j));
-  //      }
-  //      for (int j = i; j >= 0 ; j--) {
-  //        upstream.put(stage,stages.get(j));
-  //      }
-  //    }
-  //  }
+  private static final List<String> AVAILABLE_QUERY_ENGINES = collectAvailableQueryEngines();
 
   public static SimplePipeline of(Map<String, ExecutionEngine> engines, ErrorCollector errors) {
-    HashMultimap<ExecutionStage, ExecutionStage> upstream = HashMultimap.create(),
-        downstream = HashMultimap.create();
+    var upstream = HashMultimap.<ExecutionStage, ExecutionStage>create();
+    var downstream = HashMultimap.<ExecutionStage, ExecutionStage>create();
 
-    List<EngineStage> stages = new ArrayList<>();
+    var stages = new ArrayList<EngineStage>();
     // A simple pipeline expects a certain set of stages
     var logStage = getSingleStage(EngineType.LOG, engines);
     var streamStage = getSingleStage(EngineType.STREAMS, engines);
@@ -74,6 +63,7 @@ public class SimplePipeline implements ExecutionPipeline {
           streamStage.ifPresent(ss -> upstream.put(ls, ss));
           serverStage.ifPresent(vs -> downstream.put(ls, vs));
         });
+
     streamStage.ifPresent(
         ss -> {
           stages.add(ss);
@@ -81,55 +71,82 @@ public class SimplePipeline implements ExecutionPipeline {
           logStage.ifPresent(ls -> downstream.put(ss, ls));
           dbStages.forEach(dbs -> downstream.put(ss, dbs));
         });
+
     for (EngineStage dbStage : dbStages) {
       stages.add(dbStage);
       streamStage.ifPresent(ss -> upstream.put(dbStage, ss));
       serverStage.ifPresent(vs -> downstream.put(dbStage, vs));
+
+      if (serverStage.isPresent() && dbStage.engine() instanceof AbstractJDBCTableFormatEngine) {
+        validatePipelineForQueryEngine(dbStage.name(), engines, errors);
+      }
     }
+
     for (EngineStage exportStage : exportStages) {
       stages.add(exportStage);
       streamStage.ifPresent(ss -> downstream.put(exportStage, ss));
     }
+
     serverStage.ifPresent(
         vs -> {
           stages.add(vs);
           dbStages.forEach(dbs -> upstream.put(vs, dbs));
           logStage.ifPresent(ls -> upstream.put(vs, ls));
         });
+
     // Engines that support computation can have themselves as up/downstream
     for (EngineStage stage : stages) {
-      if (stage.getEngine().getType().isCompute()) {
+      if (stage.engine().getType().isCompute()) {
         upstream.put(stage, stage);
         downstream.put(stage, stage);
       }
     }
 
     return new SimplePipeline(
-        stages.stream().map(ExecutionStage.class::cast).collect(Collectors.toUnmodifiableList()),
-        upstream,
-        downstream);
+        stages.stream().map(ExecutionStage.class::cast).toList(), upstream, downstream);
+  }
+
+  private static List<String> collectAvailableQueryEngines() {
+    return ServiceLoaderDiscovery.getAll(EngineFactory.class).stream()
+        .filter(factory -> QueryEngine.class.isAssignableFrom(factory.getFactoryClass()))
+        .map(EngineFactory::getEngineName)
+        .toList();
   }
 
   private static List<EngineStage> getStage(
       EngineType engineType, Map<String, ExecutionEngine> engines) {
-    List<EngineStage> engineList =
-        engines.entrySet().stream()
-            .filter(e -> e.getValue().getType() == engineType)
-            .map(e -> new EngineStage(e.getKey(), e.getValue()))
-            .collect(Collectors.toList());
-    return engineList;
+
+    return engines.entrySet().stream()
+        .filter(e -> e.getValue().getType() == engineType)
+        .map(e -> new EngineStage(e.getKey(), e.getValue()))
+        .toList();
   }
 
   private static Optional<EngineStage> getSingleStage(
       EngineType engineType, Map<String, ExecutionEngine> engines) {
+
     var engineList = getStage(engineType, engines);
+
     if (engineList.size() == 1) {
       return Optional.of(engineList.get(0));
+
     } else if (engineList.isEmpty()) {
       return Optional.empty();
     }
     throw new IllegalArgumentException(
         "Expected a single %s engine but found multiple: %s".formatted(engineType, engineList));
+  }
+
+  private static void validatePipelineForQueryEngine(
+      String tableFormatEngineName, Map<String, ExecutionEngine> engines, ErrorCollector errors) {
+    var queryStages = getStage(EngineType.QUERY, engines);
+    if (!queryStages.isEmpty()) {
+      return;
+    }
+
+    errors.fatal(
+        "Engine '%s' requires a query engine, but none are listed under 'enabled-engines'. Available options: %s",
+        tableFormatEngineName, AVAILABLE_QUERY_ENGINES);
   }
 
   @Override
